@@ -35,3 +35,4 @@
 20061005 1.37 uses Term::ReadKey if available, rather than `stty`
 20070309 1.38 choose with a long list asking for a clue offers ^X to quit
 20070309 1.39 no change
+20070511 1.40 removed spurious debug command: &puts("returned")
